[package]
name = "osaka"
version = "0.1.0"
authors = ["jiachenbai"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "osaka-server"
path = "src/main/osaka-server.rs"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
structopt = "0.3.14"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"