[package]
name = "kyoto"
version = "0.0.1"
authors = ["jiachenbai"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kyoto-server"
path = "src/main/kyoto_server.rs"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
httparse = "1.3.4"
serde_json = "1.0"
structopt = "0.3.14"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"