[package]
name = "kyoto"
version = "0.0.1"
authors = ["jiachenbai"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Modularized cache system"
homepage = "https://github.com/JeepYiheihou/kyoto"
repository = "https://github.com/JeepYiheihou/kyoto"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kyoto-server"
path = "src/main/kyoto_server.rs"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
futures = "0.3.13"
httparse = "1.3.4"
parking_lot = "0.11.1"
rand = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.14"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"